Fix shift

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,6 @@ body {
   font-family: "Fira Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #e6e6e6;
 }
